--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,11 @@ default: &default
   pool: 5
   username: root
   host: localhost
-  password:
-  socket: /var/lib/mysql/mysql.sock
+  password: root
+  #for fedora
+  #socket: /var/lib/mysql/mysql.sock
+  # for ubuntu
+  socket: /var/run/mysqld/mysqld.sock
 
 
 development:
