--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,11 @@ default: &default
   pool: 5
   username: root
   host: localhost
-  password:  root
+  password: 
   #for fedora
-  # socket: /var/lib/mysql/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
   # for ubuntu
-  socket: /var/run/mysqld/mysqld.sock
+  # socket: /var/run/mysqld/mysqld.sock
 
 
 
